// Copyright 2020 IBM Corp.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package connectors;
option java_package = "io.fybrik";
option go_package = "fybrik.io/fybrik/pkg/connectors/protobuf";

message Credentials {
    string access_key = 1; //access credential for the bucket where the asset is stored 	
    string secret_key = 2; 
    string username = 3;
    string password = 4; 
    string api_key = 5; //api key assigned to the bucket in which the asset is stored
    string resource_instance_id = 6; //resource instance id for the bucket
}
